src/objects/RK_Club__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_State__c</fullName>
        <label>Destination State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Gujrat</fullName>
                </value>
                <value>
                    <fullName>Punjab</fullName>
                </value>
                <value>
                    <fullName>Uttar pradesh</fullName>
                </value>
                <value>
                    <fullName>Madhya pradesh</fullName>
                </value>
                <value>
                    <fullName>Himachal pardesh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mothly_income__c</fullName>
        <label>Mothly income</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_Of_State__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out Of State</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vichal__c</fullName>
        <label>vehicle</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2 Wheel</fullName>
                </value>
                <value>
                    <fullName>4 Wheel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inputfield__c</fullName>
        <label>inputfield</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iti_case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iti case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updatedfield__c</fullName>
        <label>updatedfield</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RK Club</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RK Club Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RK Clubs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>